feat: Add ArticlesList component to display articles

--- a/content/2.articles.md
+++ b/content/2.articles.md
@@ -6,10 +6,7 @@ layout: default
 
 # Articles
 
-Browse my latest articles and writings. This section will feature blog posts, technical articles, and other written content.
+Browse my latest articles and writings.
 
-## Coming Soon
-
-Articles will be added here over time. Check back later for new content!
-
-<!-- Article listing will be automatically generated from content/articles/ directory -->
+::articles-list
+::
