Update about content

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,6 +1,6 @@
 ---
-title: Sanath Kandikanti
-description: Indian software engineer sharing ideas and thoughts on tech
+title: About
+description: About Sanath Kandikantk, Software engineer sharing insights from the digital frontier - technical deep dives, lessons learned, and adventures in code
 layout: default
 ---
 
@@ -9,14 +9,26 @@ layout: default
 Hi, I am Sanath.
 
 #description
+* An engineer who speaks fluent computer.
+* Turning caffeine into code since 2020
+* Chronicling adventures in software engineering
+ 
+<br><br>
 
-I'm an engineer who specializes in talking to computers. <br><br>
-
-This is my little corner on the internet where I share my ideas and dump my thoughts—whether it's technical deep dives, random musings, or lessons learned along the way. Feel free to explore and reach out!
 ::
 
 
+As someone who speaks the language of machines, I've carved out this cozy nook in cyberspace.  It's where my ideas take flight and thoughts find a home.   Here, you'll find a blend of in-depth technical deep dives, spontaneous reflections, and insights gleaned from years of navigating the digital landscape.
 
 If you'd like to get in touch, email me at [sanathkandikanti@gmail.com](mailto:sanathkandikanti@gmail.com). You can also message me on [LinkedIn](https://www.linkedin.com/in/sanathkandikanti/?originalSubdomain=in), though I tend to give longer responses over email.
 
 Check out my code on [GitHub](https://github.com/sanathkandikanti).
+
+::gallery
+---
+images:
+  - /alpine-0.webp
+  - /alpine-1.webp
+  - /alpine-2.webp
+---
+::
