--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,7 +1,9 @@
 ---
-title: About
-description: About Sanath Kandikantk, Software engineer sharing insights from the digital frontier - technical deep dives, lessons learned, and adventures in code
+title: Sanath Kandikanti - Software Engineer | Tech Blog & Portfolio
+description: Software engineer specializing in full-stack development, cloud architecture, AI, and algorithmic trading. Explore technical articles and insights on modern software engineering practices.
 layout: default
+navigation:
+  title: About
 ---
 
 ::hero{image="/alpine-0.webp"}
